--- a/doc/doc_references.adoc
+++ b/doc/doc_references.adoc
@@ -16,11 +16,14 @@ the licenses used by the applications, etc.
 
 There are 3 main tables which are :
 
-* _server_: list of servers
-* _application_: list of business applications
-* _softInstance_: which application is deployed on which server
+* _CartoServer_: list of servers
+* _CartoApplication_: list of business applications
+* _CartoSoftInstance_: which application is deployed on which server
 
-Data are synchronized daily by batches and they are stored under s3://gerepo/.
+Daily batches extract AIP table contents in CSV format.
+They are archived daily and named with datetime and stored under _s3://gerepo/in/aip_version/_.
+
+image::images/aip_extracted_list.png[title="List of extracted AIP table contents in s3"]
 
 Zeppelin notebook URLs are
 
